# osmo-conv-test

src/: Makefile.am  viterbi.c  viterbi_gen.c  viterbi_neon.c
tests/: Makefile.am
